# mac-agents-manager-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  PRD-AI-CHAT.md  QUICK_START.md  README.md  RELEASE.md  SECURITY.md  TROUBLESHOOTING.md  app.py  install.sh  pyproject.toml  requirements-dev.txt  start_mac_agents_manager.sh
.agents/skills/mac-agents-manager/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: user.automation.stay_focus.plist
examples/: README.md  stay_focus.sh  user.automation.stay_focus.plist
scripts/: start.sh
src/mac_agents_manager/: __init__.py  app.py  chat_history.py  cli.py  constants.py  launchctl.py  launchctl_list.py  models.py  ollama_chat.py
src/mac_agents_manager/static/: style.css
src/mac_agents_manager/templates/: index.html  layout.html
tests/: conftest.py  test_app.py  test_chat_api.py  test_chat_history.py  test_cli.py  test_launchctl.py  test_models.py  test_ollama_chat.py
